hphp/hack/test/typecheck/expression_trees/await_in_splice_et_lambda.php.exp
ERROR: File "await_in_splice_et_lambda.php", line 9, characters 7-102:
Cannot use unstable feature: `allow_conditional_await_syntax` (Parsing[1002])
